# imagiro_util

./: CMakeLists.txt  imagiro-util.h  imagiro_util.cpp  imagiro_util.h  imagiro_util.mm  util.h
include/imagiro_util/: BackgroundTaskRunner.h  BufferUtils.h  ConditionLock.h  Note.h  TripleBuffer.h  fastapprox.h  util.h
include/imagiro_util/filewatcher/: gin_filewatcher.cpp  gin_filewatcher.h  gin_filewatcher.mm
include/imagiro_util/readerwriterqueue/: concurrentqueue.h
include/imagiro_util/structures/: FixedSizeQueue.h
include/imagiro_util/structures/beman/: inplace_vector.h
src/: BufferUtils.h  fastapprox.h  util.cpp  util.h
src/dsp/: envelopes.h
src/filewatcher/: gin_filewatcher.cpp  gin_filewatcher.h
src/gzip/: compress.hpp  decompress.hpp
src/miniz/: compress_string.h  miniz.h
src/structures/: FixedHashSet.h
src/structures/beman/: inplace_vector.h
src/zstr/: miniz.cpp  zstr.hpp
